# FastAPI-SchematicIO

./: .gitignore  README.md  pyproject.toml
core/: config.py
src/: main.py
src/api/: schematic_io.py  schematic_io_api.py
src/schemas/: schematic_io_schema.py
src/services/: schematic_io_service.py
static/css/: style.css
static/js/: script.js
static/templates/: api_info.html  index.html  result.html
