[project]
name = "fastapi-schematic-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.128.6",
    "jinja2>=3.1.6",
    "openai>=2.20.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.39.0",
]
